# OpenFrafsuallyLibCPP

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  binding.gyp  package-lock.json  package.json
logic/Calculators/AverageFrameRateCalculator/: AverageFrameRateCalculator.cpp  AverageFrameRateCalculator.hpp
logic/Calculators/FrameTimeCalculator/: FrameTimeCalculator.cpp  FrameTimeCalculator.hpp
logic/models/AverageFrameRate/: AverageFrameRate.cpp  AverageFrameRate.hpp
logic/models/FrameTime/: FrameTime.cpp  FrameTime.hpp
src/Calculators/AverageFrameRateCalculator/: AverageFrameRateCalculator.cpp  AverageFrameRateCalculator.hpp
src/Calculators/FrameTimeCalculator/: FrameTimeCalculator.cpp  FrameTimeCalculator.hpp
src/models/: FrameTime.hpp  FrameTimes.hpp
src/models/FrameTime/: FrameTime.cpp  FrameTime.hpp
src/models/FrameTimes/: FrameTimes.cpp  FrameTimes.hpp
